# pyrspack

./: Cargo.toml  MANIFEST.in  pyproject.toml  setup.cfg
pyrspack/: __init__.py
src/: lib.rs
