[metadata]
name = pyrspack
version = 0.1.0
description = A Python package with a Rust backend
long_description = file: README.md
long_description_content_type = text/markdown
author = Keita Mizukoshi
license = MIT

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = pyrspack

[tool:maturin]
bindings = pyo3

